--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/reset.css">
   <link rel="stylesheet" href="./styles/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
   <title>Hexlet</title>
 </head>
 <body>
   <header>
-
+    
   </header>
 
   <main>
-
+    <section>
+      <h2>Макет для вёрстки</h2>
+    </section>
   </main>
 
   <footer>
