--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
   <title>Hexlet</title>
 </head>
 <body>
-  <header>
-    
+  <header class="main-header">
+    <section>
+      <h1 class="main-page-text">
+        Когнитивные<br>
+        искажения
+      </h1>
+      <h1>
+        в программировании
+      </h1>
+      <img class="main-image" src="/img/main.png" alt="Изображение хекса">
+
+    </section>
   </header>
 
   <main>
-    <section>
-      <h2>Макет для вёрстки</h2>
-    </section>
+
   </main>
 
   <footer>
