--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,18 +11,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
   <title>Hexlet</title>
 </head>
+
 <body>
   <header class="main-header">
     <section>
-      <h1 class="main-page-text">
-        Когнитивные<br>
-        искажения
-      </h1>
-      <h1>
-        в программировании
-      </h1>
-      <img class="main-image" src="/img/main.png" alt="Изображение хекса">
-
+      <div class="title">
+        <h1 class="c-orange">
+          Когнитивные <br>
+          искажения
+        </h1>
+        <h1>
+          в программировании
+        </h1>
+      </div>
+      <img src="/img/main.png" alt="hexlet man in work">
     </section>
   </header>
 
@@ -33,4 +36,5 @@
 
   </footer>
 </body>
+
 </html>
