--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           в программировании
         </h1>
       </div>
-      <img src="/img/main.png" alt="hexlet man in work">
+      <img class="header-img" src="/img/main.png" alt="hexlet man in work">
     </section>
   </header>
 
