--- a/index.html
+++ b/index.html
@@ -14,17 +14,37 @@
 
 <body>
   <header class="main-header">
-    <section>
-      <div class="title">
-        <h1 class="c-orange">
-          Когнитивные <br>
-          искажения
-        </h1>
-        <h1>
-          в программировании
-        </h1>
-      </div>
+    <div class="title">
+      <h1 class="c-orange">
+        Когнитивные <br>
+        искажения
+      </h1>
+      <h1>
+        в программировании
+      </h1>
       <img class="header-img" src="/img/main.png" alt="hexlet man in work">
+    </div>
+
+    <section>
+      <div class="col-container">
+        <p>
+          Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто
+          игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними
+          можно как-то справиться, а иногда, к сожалению, нет.
+        </p>
+        <div>
+          <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере
+            продуктивности,
+            багам и бесконечному разочарованию
+          </p>
+          <p class="mb-top">
+            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл,
+            а
+            остатки нейтрализовать.
+          </p>
+
+        </div>
+      </div>
     </section>
   </header>
 
